--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+	<%f.label :title%>
+  	Recipe Name<br> <%= f.text_field :title %><p>
+Ingredients <br>
+	<%=f.fields_for :ingredients do |ingredient|%>
+	<%= ingredient.label :name %></br>
+	<%= ingredient.text_field :name %></p>
+	<%= ingredient.label :quantity %></br>
+	<%= ingredient.text_field :quantity %></p>
+
+
+	<%end%>
+
+
+
+  <%= f.submit %>
+
 <% end %>
